Fixed the issue with reset button not working.  Please enter the commit message for your changes. Lines starting

--- a/grid.htm
+++ b/grid.htm
@@ -184,10 +184,14 @@ var controller = {
         reportView.renderErrors(msg);
     },
     reset: function () {
-        this.clearOriginalRobot();
+        //this.clearOriginalRobot();
+        //inputView.reset();
+        canvasView.context.clearRect(0, 0, canvasView.canvas.width, canvasView.canvas.height);
+        //canvasView.init();
+        canvasView.renderCanvas2();
         this.setCurrentRobot(model.init);
         canvasView.renderRobot();
-        inputView.reset();
+        
     }
 };
 
